@@ -1,3 +1,9 @@
+2010-10-26  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>
+
+	* src/ascii-xfr.c: lineout: change to use explicit length info
+	  instead of strlen, makes storing data with included '\0' work.
+	  Thanks Kjell M. Myksvoll.
+
 2010-09-11  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>
 
 	* src/vt100.c: remove 'break' in ESC[u handling which should
